--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,23 +1,21 @@
-apply plugin: 'com.android.application'
-
-apply plugin: 'kotlin-android'
+apply plugin: 'com.android.library'
 
 apply plugin: 'kotlin-android-extensions'
+
+apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
-
     defaultConfig {
-        applicationId "com.example.crocoandroidapp"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
 
+    }
     buildTypes {
         debug {
             minifyEnabled false
@@ -29,7 +27,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     androidExtensions {
         experimental = true
     }
@@ -38,30 +35,11 @@ android {
 dependencies {
     implementation(
             fileTree(include: ['*.jar'], dir: 'libs'),
-            project(':data'),
-            project(':domain'),
             deps.kotlin.stdlib,
             deps.androidx.appcompat,
-            deps.androidx.core_ktx,
-            deps.androidx.lifecycle_extensions,
-            deps.ui.constraintlayout,
-            deps.ui.material,
-            deps.gson.gson,
-            deps.retrofit.retrofit,
-            deps.retrofit.gson,
-            deps.retrofit.rxjava,
             deps.rx.rxjava,
             deps.rx.rxandroid,
-            deps.timber.timber,
-            deps.stetho.stetho,
-            deps.stetho.okhttp3,
-            deps.groupie.groupie,
-            deps.groupie.groupie_kotlin_android_extensions,
-            deps.state_delegator.state_delegator,
-            deps.rxbinding.rxbinding,
-            deps.rxbinding.core,
-            deps.rxbinding.appcompat,
-            deps.ktx.core_ktx,
+            deps.retrofit.gson,
             deps.koin.koin_core,
             deps.koin.koin_core_ext,
             deps.koin.koin_android,
@@ -73,4 +51,10 @@ dependencies {
             deps.tests.runner,
             deps.tests.espresso_core
     )
+    androidTestImplementation 'org.testng:testng:6.9.6'
+    androidTestImplementation 'org.testng:testng:6.9.6'
+}
+
+repositories {
+    mavenCentral()
 }
