--- a/versions.gradle
+++ b/versions.gradle
@@ -6,21 +6,18 @@ versions.appcompat = '1.0.2'
 versions.core_ktx = '1.0.1'
 versions.constraintlayout = '1.1.3'
 versions.lifecycle_extensions = '1.1.1'
-versions.junit = '4.12'
-versions.runner = '1.1.1'
-versions.espresso_core = '3.1.1'
 versions.material = '1.0.0'
 versions.gson = '2.8.5'
 versions.retrofit = '2.4.0'
 versions.rxjava = '2.2.6'
 versions.rxandroid = '2.1.0'
 versions.timber = '4.7.1'
-versions.stetho = '1.5.0'
 versions.groupie = '2.3.0'
 versions.state_delegator = '1.5'
 versions.rxbinding = '3.0.0-alpha2'
 versions.core_ktx = '1.0.0'
 versions.koin = '2.0.0-rc-2'
+versions.navigation = '2.0.0'
 
 def deps = [:]
 
@@ -34,12 +31,6 @@ androidx.core_ktx = "androidx.core:core-ktx:$versions.core_ktx"
 androidx.constraintlayout = "androidx.constraintlayout:constraintlayout:$versions.constraintlayout"
 androidx.lifecycle_extensions = "android.arch.lifecycle:extensions:$versions.lifecycle_extensions"
 deps.androidx = androidx
-
-def tests = [:]
-tests.junit = "junit:junit:$versions.junit"
-tests.runner = "androidx.test:runner:$versions.runner"
-tests.espresso_core = "androidx.test.espresso:espresso-core:$versions.espresso_core"
-deps.tests = tests
 
 def gson = [:]
 gson.gson = "com.google.code.gson:gson:$versions.gson"
@@ -64,11 +55,6 @@ deps.rx = rx
 def timber = [:]
 timber.timber = "com.jakewharton.timber:timber:$versions.timber"
 deps.timber = timber
-
-def stetho = [:]
-stetho.okhttp3 = "com.facebook.stetho:stetho-okhttp3:$versions.stetho"
-stetho.stetho = "com.facebook.stetho:stetho:$versions.stetho"
-deps.stetho = stetho
 
 def groupie = [:]
 groupie.groupie = "com.xwray:groupie:$versions.groupie"
@@ -96,5 +82,10 @@ koin.koin_android = "org.koin:koin-android:$versions.koin"
 koin.koin_android_scope = "org.koin:koin-android-scope:$versions.koin"
 koin.koin_android_viewmodel = "org.koin:koin-android-viewmodel:$versions.koin"
 deps.koin = koin
+
+def navigation = [:]
+navigation.navigation = "androidx.navigation:navigation-fragment-ktx:$versions.navigation"
+navigation.navigation_ui = "androidx.navigation:navigation-ui:$versions.navigation"
+deps.navigation = navigation
 
 ext.deps = deps
