--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,17 @@ android {
         }
     }
 
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    }
+
     androidExtensions {
         experimental = true
+    }
+
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
     }
 }
 
@@ -67,5 +76,8 @@ dependencies {
             deps.koin.koin_android_viewmodel,
             deps.navigation.navigation,
             deps.navigation.navigation_ui,
+            deps.stetho.stetho,
+            deps.stetho.okhttp3,
+            deps.franmontiel.persistentCookieJar,
     )
 }
