--- a/data/build.gradle
+++ b/data/build.gradle
@@ -31,6 +31,11 @@ android {
         }
     }
 
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    }
+
     androidExtensions {
         experimental = true
     }
@@ -52,6 +57,9 @@ dependencies {
             deps.koin.koin_android,
             deps.koin.koin_android_scope,
             deps.koin.koin_android_viewmodel,
+            deps.stetho.stetho,
+            deps.stetho.okhttp3,
+            deps.franmontiel.persistentCookieJar,
     )
 }
 
