--- a/versions.gradle
+++ b/versions.gradle
@@ -5,7 +5,7 @@ versions.kotlin = '1.3.21'
 versions.appcompat = '1.0.2'
 versions.core_ktx = '1.0.1'
 versions.constraintlayout = '1.1.3'
-versions.lifecycle_extensions = '1.1.1'
+versions.lifecycle_extensions = '2.0.0-beta01'
 versions.material = '1.0.0'
 versions.gson = '2.8.5'
 versions.retrofit = '2.4.0'
@@ -21,6 +21,7 @@ versions.navigation = '2.0.0'
 versions.stetho = '1.5.1'
 versions.okhttp = '3.14.1'
 versions.persistentCookieJar = '1.0.1'
+versions.recyclerview = '1.1.0-alpha04'
 
 def deps = [:]
 
@@ -32,7 +33,7 @@ def androidx = [:]
 androidx.appcompat = "androidx.appcompat:appcompat:$versions.appcompat"
 androidx.core_ktx = "androidx.core:core-ktx:$versions.core_ktx"
 androidx.constraintlayout = "androidx.constraintlayout:constraintlayout:$versions.constraintlayout"
-androidx.lifecycle_extensions = "android.arch.lifecycle:extensions:$versions.lifecycle_extensions"
+androidx.lifecycle_extensions = "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle_extensions"
 deps.androidx = androidx
 
 def gson = [:]
@@ -103,5 +104,9 @@ deps.okhttp = okhttp
 def franmontiel = [:]
 franmontiel.persistentCookieJar = "com.github.franmontiel:PersistentCookieJar:v$versions.persistentCookieJar"
 deps.franmontiel = franmontiel
+
+def recyclerview = [:]
+recyclerview.recyclerview = "androidx.recyclerview:recyclerview:$versions.recyclerview"
+deps.recyclerview = recyclerview
 
 ext.deps = deps
