--- a/versions.gradle
+++ b/versions.gradle
@@ -22,6 +22,7 @@ versions.stetho = '1.5.1'
 versions.okhttp = '3.14.1'
 versions.persistentCookieJar = '1.0.1'
 versions.recyclerview = '1.1.0-alpha04'
+versions.glide = '4.9.0'
 
 def deps = [:]
 
@@ -108,5 +109,10 @@ deps.franmontiel = franmontiel
 def recyclerview = [:]
 recyclerview.recyclerview = "androidx.recyclerview:recyclerview:$versions.recyclerview"
 deps.recyclerview = recyclerview
+
+def glide = [:]
+glide.glide = "com.github.bumptech.glide:glide:$versions.glide"
+glide.compiler = "com.github.bumptech.glide:compiler:$versions.glide"
+deps.glide = glide
 
 ext.deps = deps
